Evento FSC rilascio demo 19/10/2016

--- a/src/main/resources/templates/evento/eventoEdit.html
+++ b/src/main/resources/templates/evento/eventoEdit.html
@@ -417,7 +417,7 @@
 								<ul class="dropdown-menu actions">
 									<!-- <li><a><label class="in-dropdown" for="submitButton" th:text="#{label.salva_modifiche}"></label></a></li> -->
 									<li><a th:text="#{label.salva_modifiche}" onclick="submitSave()"></a></li>
-									<li><a th:text="#{label.conferma_evento}"></a></li>
+									<li><a th:text="#{label.conferma_evento}" onclick="alert('Funzione non implementata')"></a></li>
 								</ul>
 							</div>
 						</div>
