--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -1643,6 +1643,7 @@
 
 				function closeModaleAddAttivitaTo(){
 					$("#add-attivitaRES-modal .close").click();
+					$("#add-attivitaRES-modal form")[0].reset();
 				}
 
 				function sendAjaxAddAttivitaToProgramma(){
