Modifica alla logica dei file per ottimizzare le performance ed effettuare un clone corretto.
Da testare su INtegrazione domanda di accreditamento per vedere se non
si è spaccato il meccanismo della reflection

--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -1644,6 +1644,8 @@
 				function closeModaleAddAttivitaTo(){
 					$("#add-attivitaRES-modal .close").click();
 					$("#add-attivitaRES-modal form")[0].reset();
+					$("#add-attivitaRES-modal .selectpicker").selectpicker('val','')
+					$('#add-attivitaRES-modal input[type="checkbox"]').removeAttr('checked').iCheck('update');
 				}
 
 				function sendAjaxAddAttivitaToProgramma(){
