--- a/src/main/resources/templates/evento/eventoEdit.html
+++ b/src/main/resources/templates/evento/eventoEdit.html
@@ -180,6 +180,8 @@
 							<!-- input id="targetTable" type="submit" name="addPersonaTo" style="display: none;" /-->
 							<input id="targetTable" type="text" name="addPersonaTo" style="display: none;" />
 							<input id="typePersona" type="text" name="typePersona" style="display: none;" />
+							<input id="fromLookUp" type="text" name="fromLookUp" style="display: none;" />
+							
 						</form>
 					</div>
 					<div class="modal-footer">
@@ -285,6 +287,7 @@
 
 							<input id="targetTableFull" type="text" name="addPersonaFullTo" style="display: none;" />
 							<input id="typePersonaFull" type="text" name="typePersonaFull" style="display: none;" />
+							<input id="fromLookUpFull" type="text" name="fromLookUpFull" style="display: none;" />
 						</form>
 					</div>
 					<div class="modal-footer">
@@ -442,6 +445,9 @@
 		<script th:inline="javascript">
 		/*<![CDATA[*/
 
+         	var days;
+			var months; 
+		           
 		    //DataTables
 		    var tables = new Array();
 
@@ -545,8 +551,8 @@
 			});
 
 			function initAllCommon(){
-				var days = getDayNamesShort();
-				var months = getMonthNames();
+				days = getDayNamesShort();
+				months = getMonthNames();
 
 				$('#dataInizio').daterangepicker({
 			        singleDatePicker: true,
@@ -580,7 +586,6 @@
 				//setta minDate alla data di inizio evento
 				$('#dataInizio').on("apply.daterangepicker change", function() {
 					updateDataFine();
-					alert("done")
 				});
 
 			    $('#dataFine').on("hide.daterangepicker", function() {
@@ -841,14 +846,18 @@
 		  	}
 
 			//apre la finestra di inserimento di una persona
-			function openAddPersonaTo(target,type){
+			function openAddPersonaTo(target,type,fromLookup){
 				if(type == 'Full'){
 					$('#targetTableFull').val(target);
 					$('#typePersonaFull').val(type);
+					$('#fromLookUpFull').val(fromLookup);
+					console.log('fromLookUpFull:' + fromLookup);
 				}else{
 					$('#targetTable').val(target);
 					$('#typePersona').val(type);
-
+					$('#fromLookUp').val(fromLookup);
+					console.log('fromLookUp:' + fromLookup);
+					
 					if(target == 'responsabiliScientifici'){
 						$("#container-qualifica").show();
 						$("#container-ruolo").hide();
@@ -868,12 +877,15 @@
 				$("#cv\\.id").val('');
 				$("#cv\\.nomeFile").val('');
 				$("#cv_label").text('').attr('href','');
+				$("#add-persona-modal .selectpicker").selectpicker('val','');
+				$('#add-persona-modal input[type="checkbox"]').removeAttr('checked').iCheck('update');
+				$('#add-persona-modal input[type="radio"]').removeAttr('checked').iCheck('update');
 			}
 
 			//chiude la modale di inserimento di una personaFull svuotandone i contenuti
 			function closeModaleAddPersonaFull(){
 				$("#add-personaFull-modal .close").click();
-				$("#add-persona-modal form")[0].reset();
+				$("#add-personaFull-modal form")[0].reset();
 			}
 
 			//chiude la modale di inserimento di uno sponsor svuotandone i contenuti
@@ -1019,8 +1031,8 @@
 					$.get(url).done(function(data) {
 						closeModaleLookupPersona();
 						$('#container-addPersonaFullTo').html(data);
-						openAddPersonaTo(target,type);
 						$('#add-'+ target).click();
+						openAddPersonaTo(target,type,true);
 					  })
 				  	.fail(function() {
 				    	alert( "error" );
@@ -1030,8 +1042,8 @@
 						closeModaleLookupPersona();
 						$('#container-addPersonaTo').html(data);
 						reInitModaleAddPersona();
-						openAddPersonaTo(target,type);
 						$('#add-'+ target).click();
+						openAddPersonaTo(target,type,true);
 					  })
 				  	.fail(function() {
 				    	alert( "error" );
@@ -1078,10 +1090,10 @@
 						<th th:text="#{label.qualifica}">Qualifica</th>
 						<th th:text="#{label.cv}">CV</th>
 						<th style="padding-right: 8px;">
-							<a id="lookup-responsabiliScientifici" class="btn btn-primary" onclick="openLookupPersona('responsabiliScientifici','base')" data-toggle="modal" data-target=".modal-lookup-persona">
+							<a id="lookup-responsabiliScientifici" class="btn btn-primary" onclick="openLookupPersona('responsabiliScientifici','base',true)" data-toggle="modal" data-target=".modal-lookup-persona">
 								<span><i class="fa fa-search"></i></span>
 							</a>
-							<a id="add-responsabiliScientifici" class="btn btn-success" onclick="openAddPersonaTo('responsabiliScientifici','base')" data-toggle="modal" data-target=".modal-add-persona">
+							<a id="add-responsabiliScientifici" class="btn btn-success" onclick="openAddPersonaTo('responsabiliScientifici','base',false)" data-toggle="modal" data-target=".modal-add-persona">
 								<span><i class="fa fa-plus"></i></span>
 							</a>
 						</th>
@@ -1120,10 +1132,10 @@
 						<th th:text="#{label.titolare} + '/' + #{label.sostituto}">Titolare/Sostituto</th>
 						<th th:text="#{label.cv}">CV</th>
 						<th style="padding-right: 8px;">
-							<a id="lookup-docenti" class="btn btn-primary" onclick="openLookupPersona('docenti','base')" data-toggle="modal" data-target=".modal-lookup-persona">
+							<a id="lookup-docenti" class="btn btn-primary" onclick="openLookupPersona('docenti','base',true)" data-toggle="modal" data-target=".modal-lookup-persona">
 								<span><i class="fa fa-search"></i></span>
 							</a>
-							<a id="add-docenti" class="btn btn-success" onclick="openAddPersonaTo('docenti','base')" data-toggle="modal" data-target=".modal-add-persona">
+							<a id="add-docenti" class="btn btn-success" onclick="openAddPersonaTo('docenti','base',false)" data-toggle="modal" data-target=".modal-add-persona">
 								<span><i class="fa fa-plus"></i></span>
 							</a>
 						</th>
@@ -1163,10 +1175,10 @@
 						<th th:text="#{label.telefono}">Telefono</th>
 						<th th:text="#{label.cellulare}">Cellulare</th>
 						<th style="padding-right: 8px;">
-							<a id="lookup-responsabileSegreteria" class="btn btn-primary" onclick="openLookupPersona('responsabileSegreteria','Full')" data-toggle="modal" data-target=".modal-lookup-persona">
+							<a id="lookup-responsabileSegreteria" class="btn btn-primary" onclick="openLookupPersona('responsabileSegreteria','Full',true)" data-toggle="modal" data-target=".modal-lookup-persona">
 								<span><i class="fa fa-search"></i></span>
 							</a>
-							<a id="add-responsabileSegreteria" class="btn btn-success" onclick="openAddPersonaTo('responsabileSegreteria','Full')" data-toggle="modal" data-target=".modal-add-personaFull">
+							<a id="add-responsabileSegreteria" class="btn btn-success" onclick="openAddPersonaTo('responsabileSegreteria','Full',false)" data-toggle="modal" data-target=".modal-add-personaFull">
 								<span><i class="fa fa-plus"></i></span>
 							</a>
 						</th>
