--- a/src/main/resources/templates/evento/eventoFSCEdit.html
+++ b/src/main/resources/templates/evento/eventoFSCEdit.html
@@ -1293,6 +1293,8 @@
 			 	function closeModaleAddAttivitaTo(){
 					$("#add-attivitaFSC-modal .close").click();
 					$("#add-attivitaFSC-modal form")[0].reset();
+					$("#add-attivitaFSC-modal .selectpicker").selectpicker('val','')
+					$('#add-attivitaFSC-modal input[type="checkbox"]').removeAttr('checked').iCheck('update');
 				}
 
 				/* function reInitModaleAddAttivitaTo(){
