inserito il campo ore per ogni ruolo in FSC

--- a/src/main/resources/templates/evento/eventoFSCEdit.html
+++ b/src/main/resources/templates/evento/eventoFSCEdit.html
@@ -8,7 +8,7 @@
 	<th:block th:fragment="eventoFSCEdit">
 
 		<div class="x_content">
-		
+
 		<!-- finestra modale di aggiunta attivitaRES a programma del Giorno -->
 			<div id="add-attivitaFSC-modal" class="modal fade modal-add-attivitaFSC" data-model-index="4" role="dialog">
 				<div class="modal-dialog modal-lg">
@@ -73,7 +73,7 @@
 										</div>
 									</div>
 
-									
+
 									<!-- METODO DI LAVORO -->
 									<div id="container-metodiDiLavoro" class="item form-group">
 										<label class="control-label col-md-3 col-sm-3 col-xs-11" for="razionale">
@@ -89,27 +89,27 @@
 											</div>
 										</div>
 									</div>
-									
-									<div class="divider-dashed"></div>
-									
-									<!-- RUOLI COINVOLTI -->
-									<div id="container-ruoliCoinvolti" class="item form-group">
-										<label class="control-label col-md-3 col-sm-3 col-xs-11" for="ruoliCoinvolti">
-											<span th:text="#{label.ruoli_coinvolti}">Ruoli Coinvolti</span>
-											<span class="required">*</span>
-										</label>
-										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="razionale">
-											<div class="checkbox" th:each="ruolo, row : ${T(it.tredi.ecm.dao.enumlist.RuoloFSCEnum).values()}">
-												<label>
-													<input type="checkbox" class="flat" th:field="*{ruoli}" th:value="${ruolo}"  />
-													<span th:text="${ruolo.nome}"></span>
-												</label>
-											</div>
-										</div>
-									</div>
 
-									<!-- TEMPO DEDICATO LIBERO -->
-									<div id="container-tempoDedicato-UNO" class="item form-group">
+									<div class="divider-dashed"></div>
+
+<!-- 									RUOLI COINVOLTI -->
+<!-- 									<div id="container-ruoliCoinvolti" class="item form-group"> -->
+<!-- 										<label class="control-label col-md-3 col-sm-3 col-xs-11" for="ruoliCoinvolti"> -->
+<!-- 											<span th:text="#{label.ruoli_coinvolti}">Ruoli Coinvolti</span> -->
+<!-- 											<span class="required">*</span> -->
+<!-- 										</label> -->
+<!-- 										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="razionale"> -->
+<!-- 											<div class="checkbox" th:each="ruolo, row : ${T(it.tredi.ecm.dao.enumlist.RuoloFSCEnum).values()}"> -->
+<!-- 												<label> -->
+<!-- 													<input type="checkbox" class="flat" th:field="*{ruoli}" th:value="${ruolo}"  /> -->
+<!-- 													<span th:text="${ruolo.nome}"></span> -->
+<!-- 												</label> -->
+<!-- 											</div> -->
+<!-- 										</div> -->
+<!-- 									</div> -->
+
+								<!-- TEMPO DEDICATO LIBERO -->
+<!-- 								<div id="container-tempoDedicato-UNO" class="item form-group">
 										<label class="control-label col-md-3 col-sm-3 col-xs-11" for="razionale">
 											<span th:text="#{label.tempo_dedicato}">Tempo Dedicato</span>
 											<span class="required">*</span>
@@ -118,7 +118,7 @@
 											<input class="form-control" type="number" th:field="*{tempoDedicato}" />
 										</div>
 									</div>
-<!-- 
+
 									TEMPO DEDICATO NON FRAZIONABILE
 									<div id="container-tempoDedicato-UNO" class="item form-group">
 										<label class="control-label col-md-3 col-sm-3 col-xs-11" for="razionale">
@@ -129,7 +129,7 @@
 											<input class="form-control" type="number" step="1" th:field="*{tempoDedicato}" />
 										</div>
 									</div>
-									
+
 									TEMPO DEDICATO MULTIPLO DI DUE
 									<div id="container-tempoDedicato-UNO" class="item form-group">
 										<label class="control-label col-md-3 col-sm-3 col-xs-11" for="razionale">
@@ -139,25 +139,37 @@
 										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="razionale">
 											<input class="form-control" type="number" step="2" th:field="*{tempoDedicato}" />
 										</div>
-									</div>
-									
-									<div id="container-ruoloOre" class="item form-group">
+									</div> -->
+
+									<div id="container-ruoliCoinvolti" class="item form-group">
 										<label class="control-label col-md-3 col-sm-3 col-xs-11" for="ruoliCoinvolti">
 											<span th:text="#{label.ruoli_coinvolti}">Ruoli Coinvolti</span>
 											<span class="required">*</span>
 										</label>
 										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12" id="razionale">
-											<div class="checkbox" th:each="ruolo, row : ${T(it.tredi.ecm.dao.enumlist.RuoloFSCEnum).values()}">
-												<label>
-													<input type="checkbox" class="flat" th:field="${eventoWrapper.mappaRuoloOre[ruolo]}" th:value="${ruolo}"  />
-													<span th:text="${ruolo.nome}"></span>
-												</label>
-												<input class="form-control" type="number" step="2" th:field="${eventoWrapper.mappaRuoloOre[ruolo].tempoDedicato}" />
+											<div th:each="ruolo, row : ${T(it.tredi.ecm.dao.enumlist.RuoloFSCEnum).values()}">
+												<div class="inner-ruoliCoinvolti">
+													<div class="checkbox">
+														<label>
+															<input type="checkbox" class="flat" th:field="${eventoWrapper.mappaRuoloOre[__${ruolo}__].ruolo}" th:value="${ruolo}"  />
+															<span th:text="${ruolo.nome}"></span>
+														</label>
+													</div>
+													<div class="with-margin-top">
+														<label class="control-label col-xs-2">
+															<span th:text="#{label.ore}">Ore</span>
+															<span class="required">*</span>
+														</label>
+														<div class="col-xs-10 z-index-top">
+															<input class="form-control" type="text" pattern="numeric" th:field="${eventoWrapper.mappaRuoloOre[__${ruolo}__].tempoDedicato}" />
+														</div>
+													</div>
+												</div>
 											</div>
 										</div>
-									</div>  -->
+									</div>
 
-									<!-- fragment da aggiornare -->	
+									<!-- fragment da aggiornare -->
 									<input id="targetTableAttivitaFSC" type="text" name="target" style="display: none;" />
 									<!-- fase a cui agganciare l'attività -->
 									<input id="addAttivitaTo" type="text" name="addAttivitaTo" style="display: none;" />
@@ -1116,17 +1128,17 @@
 
 				<input id="submitButton" type="submit" style="display: none;" />
 			</form>
-			
+
 			<script th:inline="javascript">
 			/*<![CDATA[*/
-	           
+
 				var selectRuoliCoinvolti = new Array();
 				selectRuoliCoinvolti['TRAINING_INDIVIDUALIZZATO'] = new Array(['PARTECIPANTE','TUTOR','ESPERTO','COORDINATORE']);
 				selectRuoliCoinvolti['GRUPPI_DI_MIGLIORAMENTO'] = new Array(['PARTECIPANTE','COORDINATORE_GRUPPI']);
 				selectRuoliCoinvolti['ATTIVITA_DI_RICERCA'] = new Array(['PARTECIPANTE','COORDINATORE_ATTIVITA_RICERCA']);
 				selectRuoliCoinvolti['AUDIT_CLINICO_ASSISTENZIALE'] = new Array(['PARTECIPANTE','COORDINATORE_ATTIVITA_AUDIT']);
-				
-				
+
+
 				$(document).ready(function() {
 					//init selecpicker
 				    $('select').selectpicker({
@@ -1139,14 +1151,14 @@
 					$('#tipologiaEventoId').on('change', setEvResTipologiaGruppo);
 					$('#tipologiaEventoId').on('change', setEvResSperimentazioneClinica);
 					$('#tipologiaEventoId').on('change', setEvResOttenutoComitatoEtico);
-					
+
 					//non funziona
 					//$('#sperimentazioneClinicaSiId, #sperimentazioneClinicaNoId').on('change', setEvResOttenutoComitatoEtico);
 					$(".sperimentazioneClinica").on("ifChecked", setEvResOttenutoComitatoEtico);
-					
+
 					initAll();
 				});
-				
+
 				function initAll(){
 					$('input.flat').iCheck({
 			            checkboxClass: 'icheckbox_flat-green',
@@ -1157,7 +1169,7 @@
 					setEvResSperimentazioneClinica();
 					setEvResOttenutoComitatoEtico();
 				}
-				
+
 				//eventLister cambio tab
 				$('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
 			    	tabSelected = e.target.id;
@@ -1180,7 +1192,7 @@
 						$("#tipologiaGruppo").selectpicker('refresh');
 					}
 				}
-				
+
 				function setEvResSperimentazioneClinica() {
 					//console.log($('#tipologiaEventoId').val());
 					var val = $('#tipologiaEventoId').selectpicker('val');
@@ -1196,7 +1208,7 @@
 						//$("#sperimentazioneClinica").selectpicker('refresh');
 					}
 				}
-				
+
 				function setEvResOttenutoComitatoEtico() {
 					//console.log($('#tipologiaEventoId').val());
 					var val = $('#tipologiaEventoId').selectpicker('val');
@@ -1211,26 +1223,32 @@
 						//$("#sperimentazioneClinica").selectpicker('deselectAll');
 					}
 				}
-				
+
 				function setEvFSCRuoliCoinvolti() {
 					var val = $('#tipologiaEventoId').selectpicker('val');
-					$.each($('#container-ruoliCoinvolti' + " .checkbox"), function() {
+					$.each($(".inner-ruoliCoinvolti"), function() {
 						$(this).hide();
+						$.each($(this).find("input[type='text']"), function() {
+							$(this).val('');
+						});
+						$.each($(this).find("input[type='checkbox']"), function() {
+							$(this).iCheck('uncheck');
+						});
 					});
 
 					if(val != null && val != undefined){
 						var data = selectRuoliCoinvolti[val][0];
-						
+
 						for(var item = 0; item < data.length; item++){
-							$.each($('#container-ruoliCoinvolti' + " .checkbox"), function() {
+							$.each($(".inner-ruoliCoinvolti"), function() {
 								if($(this).find("input[type='checkbox']").val() == data[item])
 									$(this).show();
 							});
-						}						
+						}
 					}
 				}
-				
-				
+
+
 				/* function updateRuoliCoinvolti(caller){
 					var tipologiaEvento = $(caller).val();
 					var selectId = '#container-ruoliCoinvolti';
@@ -1254,20 +1272,20 @@
 						}
 					});
 				}; */
-				
-			 
-			 /********************* PROGRAMMA GIORNALIERO ****************************/          
+
+
+			 /********************* PROGRAMMA GIORNALIERO ****************************/
 			  function openAddAttivitaTo(target,programmaIndex){
 					$('#targetTableAttivitaFSC').val(target);
 					$('#addAttivitaTo').val(programmaIndex);
 
 					var tipologiaEvento = $('#tipologiaEventoId').val();
 					setEvFSCRuoliCoinvolti();
-					
+
 					switch(tipologiaEvento){
-					case 'TRAINING_INDIVIDUALIZZATO': showAzioneLabel();						
+					case 'TRAINING_INDIVIDUALIZZATO': showAzioneLabel();
 						break;
-					case 'GRUPPI_DI_MIGLIORAMENTO':	showFaseLabel();					
+					case 'GRUPPI_DI_MIGLIORAMENTO':	showFaseLabel();
 						break;
 					case 'PROGETTI_DI_MIGLIORAMENTO':showAzioneLabel();
 						break;
@@ -1277,18 +1295,18 @@
 						break;
 					default: break;
 					}
-				}     
-				
+				}
+
 				function showFaseLabel(){
 					$('#azioneLabel').hide();
 					$('#faseLabel').show();
 				}
-				
+
 				function showAzioneLabel(){
 					$('#faseLabel').hide();
 					$('#azioneLabel').show();
 				}
-			
+
 				/*parametrizzabile passando solo FSC*/
 			 	function closeModaleAddAttivitaTo(){
 					$("#add-attivitaFSC-modal .close").click();
@@ -1315,10 +1333,10 @@
 						  })
 					  	.fail(function() {
 					  		//TODO mostra error sui campi mancanti
-					    	alert( "error" );
+					    	alert( "errorFSC" );
 					 	 })
 				}
-				
+
 				/*parametrizzabile - è identica a RES*/
 				function removeAttivitaFrom(target,caller){
 					var rowIndex = $(caller).parent().parent().data('row-id');
@@ -1329,7 +1347,7 @@
 
 					$("#" + target).load(url);
 				}
-			           
+
 				/*parametrizzabile - è  identica a RES*/
 				function reloadSection(selectedTab){
 					if(selectedTab == 'tab1'){
@@ -1340,7 +1358,7 @@
 						sendAjaxReloadSection('3');
 					}
 				}
-				
+
 				/*parametrizzabile passando solo FSC*/
 				function sendAjaxReloadSection(sectionIndex){
 					$.post([[@{|/provider/${eventoWrapper.evento.provider.id}/evento/showSection/|}]] + sectionIndex, $('#formEventoFSC').serialize())
@@ -1375,10 +1393,10 @@
 					default: 	break;
 				}
 				}
-			           
+
 			/*]]>*/
 			</script>
-			
+
 		</div>
 
 	</th:block>
