--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -560,6 +560,21 @@ h2 {
 	display: block;
 }
 
+.value-inline {
+	padding-top: 8px;
+	min-height: 30px;
+	font-size: 17px;
+	display: inline-block;
+}
+
+.value-inline-first {
+	padding-top: 8px;
+	padding-left: 10px;
+	min-height: 30px;
+	font-size: 17px;
+	display: inline-block;
+}
+
 .label-show {
 	font-size: 17px;
 }
@@ -1138,4 +1153,8 @@ tr.integrazione-eliminazione td:first-child a{
 
 .dropdown-menu open {
 	max-height: 300px !important;
+}
+
+.z-index-top {
+	z-index: 1000;
 }
